[package]
name = "maparr"
version = "0.1.0"
edition = "2021"
authors = ["Maxim Zhiburt <zhiburt@gmail.com>"]
description = "A rust macro to build a static `Map` based on const array"
repository = "https://github.com/zhiburt/maparr"
homepage = "https://github.com/zhiburt/maparr"
documentation = "https://docs.rs/maparr"
keywords = ["map", "hashmap", "dictionary", "macros", "macro"]
license = "MIT"

[dependencies]
paste = "1.0"
